bug fix projects not centered on <900px media query

--- a/style.css
+++ b/style.css
@@ -1041,6 +1041,7 @@ button:hover {
 
     #projects {
         flex-direction: column;
+        align-items: center;
         height: auto;
         font-size: 1.1rem;
         gap: 20px;
